# amsterdam-housing-2025

./: .gitattributes  .gitignore  README.md  pyproject.toml
data/: listing.csv  pararius_scrape.db  status_dict.csv
data/files/: city.csv  postcode4_latlng.geojson  postcode4_lnglat.geojson  postcode6_latlng.geojson  postcode6_lnglat.geojson  status_dict.csv
output/: listing_2025-08-10.csv  pc4_interactive_price_map.html  pc6_interactive_price_map.html
scripts/: scrape_pararius.py
src/db/: db_handler.py  schema.py
src/model/: price_predictor.py
src/scraping/: city_scraper.py  ochestrator.py  pararius_scraper.py
src/srcaping/: pararius_scraper.py
src/visualization/: postcode_visualization.py
