[project]
name = "amsterdam-housing-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "fake-useragent>=2.2.0",
    "pandas>=2.3.1",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.42",
    "tqdm>=4.67.1",
]
