[project]
name = "amsterdam-housing-2025"
version = "0.1.0"
description = "Project to scrape, analyze, and visualize housing market data"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "fake-useragent>=2.2.0",
    "folium>=0.20.0",
    "geopandas>=1.1.1",
    "haversine>=2.9.0",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.5",
    "pandas>=2.3.1",
    "requests>=2.32.4",
    "scikit-learn>=1.7.1",
    "sqlalchemy>=2.0.42",
    "tqdm>=4.67.1",
]
